fixed stacktrace bug (position and content not showing)

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -409,6 +409,9 @@ a{
 	padding-left: 1em;
 	line-height: 2;
 }
+#callTree .listeNoeuds {
+	margin-left: 1.15em;
+}
 
 #callTree .panelInterface{
 	background-color: rgba(255, 255, 255, 0.75);
